--- a/.env.connect
+++ b/.env.connect
@@ -1,5 +1,5 @@
-DB_NAME=zanele
-DB_HOST=localhost
-DB_PORT=5433
-DB_USER=zanele
-DB_PASSWORD=Xanny1305
+DB_NAME=
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_PASSWORD=
