--- a/.env.connect
+++ b/.env.connect
@@ -1,5 +1,5 @@
-DB_NAME=
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
+DB_NAME=job_konnect_dj5g
+DB_HOST=dpg-cisp67tgkuvgs6rbv4b0-a
+DB_PORT=5432
+DB_USER=job_konnect_dj5g_user
+DB_PASSWORD=VjjdcynJHbRSVLeUuDM0oQPMBCYS7pwJ
